check ikiwiki.pot into svn to avoid problems

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -9,83 +9,8 @@ Note that for more formal bug reports or todo items, you can also edit the
 
 # Installation/Setup questions
 
-I ran into a problem when installing from svn.  I got "invalid variable
-interpolation" errors for Wrappers.pm.  I added the flag '--extract-all' to
-'po/Makefile' and 'po/t' to the xgettext line.  Once I did that I was able
-to make and make test just fine. --HarleyPig
-
-> It would be helpful if you could post the actual error message you saw.
-> Also would be nice to know what versions of perl and gettext you have.
-> Perhaps your xgettext is an older version from before it natively
-> supported perl.
-> Adding --extract-all doesn't seem like a good idea, since this causes it
-> to treat every string in the entire wiki as translatable. I don't know
-> what you're talking about regarding 'po/t'. --[[Joey]]
-
->> make[1]: Entering directory `/home/www/ikiwiki/po'
->> Rebuilding the pot file
->> xgettext ../IkiWiki/CGI.pm ../IkiWiki/Plugin/aggregate.pm ../IkiWiki/Plugin/brokenlinks.pm ../IkiWiki/Plugin/camelcase.pm ../IkiWiki/Plugin/ddate.pm ../IkiWiki/Plugin/favicon.pm ../IkiWiki/Plugin/fortune.pm ../IkiWiki/Plugin/goodstuff.pm ../IkiWiki/Plugin/googlecalendar.pm ../IkiWiki/Plugin/haiku.pm ../IkiWiki/Plugin/html.pm ../IkiWiki/Plugin/htmlscrubber.pm ../IkiWiki/Plugin/htmltidy.pm ../IkiWiki/Plugin/httpauth.pm ../IkiWiki/Plugin/img.pm ../IkiWiki/Plugin/inline.pm ../IkiWiki/Plugin/linkmap.pm ../IkiWiki/Plugin/map.pm ../IkiWiki/Plugin/mdwn.pm ../IkiWiki/Plugin/meta.pm ../IkiWiki/Plugin/mirrorlist.pm ../IkiWiki/Plugin/openid.pm ../IkiWiki/Plugin/orphans.pm ../IkiWiki/Plugin/otl.pm ../IkiWiki/Plugin/pagecount.pm ../IkiWiki/Plugin/pagestats.pm ../IkiWiki/Plugin/passwordauth.pm ../IkiWiki/Plugin/poll.pm ../IkiWiki/Plugin/polygen.pm ../IkiWiki/Plugin/rawhtml.pm ../IkiWiki/Plugin/rst.pm ../IkiWiki/Plugin/search.pm ../IkiWiki/Plugin/shortcut.pm ../IkiWiki/Plugin/sidebar.pm ../IkiWiki/Plugin/skeleton.pm ../IkiWiki/Plugin/smiley.pm ../IkiWiki/Plugin/tag.pm ../IkiWiki/Plugin/template.pm ../IkiWiki/Plugin/textile.pm ../IkiWiki/Plugin/toc.pm ../IkiWiki/Plugin/toggle.pm ../IkiWiki/Plugin/typography.pm ../IkiWiki/Plugin/wikitext.pm ../IkiWiki/Rcs/Stub.pm ../IkiWiki/Rcs/git.pm ../IkiWiki/Rcs/mercurial.pm ../IkiWiki/Rcs/svn.pm ../IkiWiki/Rcs/tla.pm ../IkiWiki/Render.pm ../IkiWiki/Setup.pm ../IkiWiki/Setup/Standard.pm ../IkiWiki/UserInfo.pm ../IkiWiki/Wrapper.pm ../ikiwiki.in ../IkiWiki.pm -o ikiwiki.pot -Lperl --add-comments=translators ../IkiWiki/Wrapper.pm:64: invalid variable interpolation at "$"
->> make[1]: *** [ikiwiki.pot] Error 1
->> make[1]: Leaving directory `/home/www/ikiwiki/po'
->> make: *** [extra_build] Error 2
->>
->> harleypig ikiwiki # xgettext --version
->>
->> xgettext (GNU gettext-tools) 0.15
->>
->> harleypig ikiwiki # perl -v
->>
->> This is perl, v5.8.8 built for i686-linux
->>
->> Sorry about the po/t report ... it was the test file I used to figure out what was wrong and I forgot to remove it.  This is against the subversion repository, version 2338.
->> The referenced line has a $! variable, which the documentation for gettext indicates is the problem.
-
-I have just installed ikiwiki and it works - at least I have the example index.mdwn page
-compiled and visible.  However I have a few issues/problems:-
-
-* A couple of the 'optional' Perl modules aren't optional, you can't install ikiwiki without them,
-these are HTML::Template and HTML::Scrubber (at least I think it was these two, it's a bit messy 
-to go back and find out).
-
-> You're right, HTML::Template is required. HTML::Scrubber is only required
-> in the default configuration, and is optional if the htmlscrubber plugin
-> is disabled. --[[Joey]]
-
-* I don't seem to have got an ikiwiki man page created.
-
-> It should be installed in /usr/share/man, or a similar directory
-> depending on how your perl is set up and how you did the install.
-> --[[Joey]]
-
-> Found it, in /usr/local/share/man, since no other man pages are in either /usr/share/man or in /usr/local/share/man the ikiwiki
-> man page is a bit lonely, and more to the point not on my MANPATH.  Still I have found it now, I'll just move it to somewhere
-> more sensible. [[Chris]]
-
-* Running "ikiwiki --setup ikiwiki.setup" doesn't do anything.  I have edited ikiwiki.setup to
-my local settings.  There are no errors but neither does anything get compiled.  An ikiwiki
-command to explicitly do the compile works fine.  Am I misunderstanding something here?
-
-> Further tests indicate that ikiwiki isn't seeing changed files so doesn't always rebuild.
-> How does ikiwiki decide when to rebuild?  I tried a full command line like "ikiwiki --verbose ikiwiki ~/public_html/ikiwiki --url=http://www.isbd.ltd.uk/~chris/ikiwiki/" and that doesn't do anything
-either though it was the command line I originally used to compile.  After a long interval I 'touch'ed 
-the files and then it *did* compile but 'touch'ing the files after a few minutes only doesn't seem to force a recompile.  I'm even more confused!
-
-> ikiwiki only compiles files whose modification times have changed. It
-> should see any change made as close as a second after the last compile.
-> When run with --setup, ikiwiki always rebuilds every file in the wiki. If
-> --setup is not working, you must have it pointed at the wrong path or
-> something; you can pass -v to see what it's doing. I don't know why it
-> would not see recently changed files; you could try stracing it.
-> --[[Joey]]
-
-> OK, thanks, I don't quite know what was happening before but it seems to be working right now.
-> --[[Chris]]
-
->> Weird. I wish I knew what happened, but as it's working now, I'm
->> guessing some kind of user error was involved. --[[Joey]]
-
-* I wish there was a mailing list, much easier for this sort of stuff than this, apart from
-anything else I get to use a decent editor.
+(I've moved HarleyPig's problem to its [[own_page|bugs/xgettext_issue]]
+--[[Joey]])
 
 ----
 # Excellent - how do I translate a TWiki site?
