--- a/debian/changelog
+++ b/debian/changelog
@@ -17,8 +17,9 @@ ikiwiki (1.41) UNRELEASED; urgency=low
   * Replace underscores in shortcut texts with spaces when formatting for
     display. This allows using a shortcut like [[wikipedia War_of_1812]],
     which links to the correct remote page, but is displayed nicely.
+  * When building the doc wiki, build with LANG=C.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 27 Jan 2007 19:59:58 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 27 Jan 2007 20:52:10 -0500
 
 ikiwiki (1.40) unstable; urgency=low
 
