* More gettext fun.

--- a/doc/bugs/Discussion_link_not_translated_in_post.mdwn
+++ b/doc/bugs/Discussion_link_not_translated_in_post.mdwn
@@ -13,3 +13,5 @@ can see "Discussion" link, instead of Polish "Dyskusja" link. --Pawel
 >> you know what I mean :) --Pawel
 
 >>> Joey, what about my bug report? ;) --Pawel
+
+>>>> Found and [[fixed|bugs/done]] --[[Joey]].
