--- a/debian/changelog
+++ b/debian/changelog
@@ -18,8 +18,9 @@ ikiwiki (1.41) UNRELEASED; urgency=low
     display. This allows using a shortcut like [[wikipedia War_of_1812]],
     which links to the correct remote page, but is displayed nicely.
   * When building the doc wiki, build with LANG=C.
+  * More gettext fun.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 27 Jan 2007 20:52:10 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 27 Jan 2007 21:16:33 -0500
 
 ikiwiki (1.40) unstable; urgency=low
 
