web commit by http://ethan.betacantrips.com/: chatter

--- a/doc/todo/recentchanges.mdwn
+++ b/doc/todo/recentchanges.mdwn
@@ -28,3 +28,7 @@
   > creation. --[[JoshTriplett]]
 
   > Of course you can use email subscriptions for that too.. --[[Joey]]
+
+  >> I have more thoughts on this topic which I will probably write 
+  >> tomorrow. If you thought my other patches were blue-sky, wait until 
+  >> you see this. --Ethan
