--- a/doc/bugs/Discussion_link_not_translated_in_post.mdwn
+++ b/doc/bugs/Discussion_link_not_translated_in_post.mdwn
@@ -50,3 +50,6 @@ can see "Discussion" link, instead of Polish "Dyskusja" link. --Pawel
 >>>>>        (3) $ENV{LANG}=pl_PL.UTF-8
 >>>>>
 >>>>> Is it a useful information for you? :) --Pawel
+
+>>>>>> Not really.. I was able to reproduce the problem you desciribed and
+>>>>>> my changes fixed the problem I reproduced. --[[Joey]]
