web commit by http://ethan.betacantrips.com/: me too

--- a/doc/bugs/Error:_OpenID_failure:_time_bad_sig:.mdwn
+++ b/doc/bugs/Error:_OpenID_failure:_time_bad_sig:.mdwn
@@ -36,3 +36,8 @@ ikiwiki or my OpenID servers. --Pawel
 
 > At least it doesn't seem to be a time sync problem since the test for too
 > early/too late times have different error messages.. --[[Joey]]
+
+I've had this problem too, but with my track record of reporting OpenID bugs 
+I thought it best if I held my tongue. I usually experience this the first
+time I sign in on any ikiwiki installation of {ikiwiki.kitenet, ikidev, 
+betacantrips}, and I think re-logging in always works. --Ethan
