--- a/debian/changelog
+++ b/debian/changelog
@@ -19,8 +19,11 @@ ikiwiki (1.41) UNRELEASED; urgency=low
     which links to the correct remote page, but is displayed nicely.
   * When building the doc wiki, build with LANG=C.
   * More gettext fun.
+  * Fix openid signin secret generation code. This fixes the bug that made
+    all openid signins fail the first time, and then succeed the second
+    time.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 27 Jan 2007 21:16:33 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue, 30 Jan 2007 02:15:33 -0500
 
 ikiwiki (1.40) unstable; urgency=low
 
