--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.41) UNRELEASED; urgency=low
+ikiwiki (1.41) unstable; urgency=low
 
   * Gettext 1.04 or up is needed for the OO interface that ikiwiki needs,
     if an older version is installed, just don't gettext strings, instead of
@@ -23,7 +23,7 @@ ikiwiki (1.41) UNRELEASED; urgency=low
     all openid signins fail the first time, and then succeed the second
     time.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 30 Jan 2007 02:15:33 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue, 30 Jan 2007 02:36:53 -0500
 
 ikiwiki (1.40) unstable; urgency=low
 
