--- a/doc/news/version_1.41.mdwn
+++ b/doc/news/version_1.41.mdwn
@@ -15,7 +15,7 @@ ikiwiki 1.41 released with [[toggle text="these changes"]]
      the problem described in bugs/svn\_fails\_to\_update. Thanks to Ethan for the
      analysis and patch.
    * Replace underscores in shortcut texts with spaces when formatting for
-     display. This allows using a shortcut like [[wikipedia War_of_1812]],
+     display. This allows using a shortcut like `\[[wikipedia War_of_1812]]`,
      which links to the correct remote page, but is displayed nicely.
    * When building the doc wiki, build with LANG=C.
    * More gettext fun.
