* Fix one more missing translation of Discussion.

--- a/doc/bugs/Discussion_link_not_translated_in_post.mdwn
+++ b/doc/bugs/Discussion_link_not_translated_in_post.mdwn
@@ -53,3 +53,6 @@ can see "Discussion" link, instead of Polish "Dyskusja" link. --Pawel
 
 >>>>>> Not really.. I was able to reproduce the problem you desciribed and
 >>>>>> my changes fixed the problem I reproduced. --[[Joey]]
+
+> Found and fixed one more, when per-post discussion links are used in a
+> blog. --[[Joey]]
