--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.42) UNRELEASED; urgency=low
+
+  * Fix one more missing translation of Discussion.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 31 Jan 2007 02:08:57 -0500
+
 ikiwiki (1.41) unstable; urgency=low
 
   * Gettext 1.04 or up is needed for the OO interface that ikiwiki needs,
