* Fix for missing backlinks() in pagestats plugin.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 ikiwiki (1.42) UNRELEASED; urgency=low
 
   * Fix one more missing translation of Discussion.
+  * Fix for missing backlinks() in pagestats plugin.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 31 Jan 2007 02:08:57 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed, 31 Jan 2007 02:12:01 -0500
 
 ikiwiki (1.41) unstable; urgency=low
 
