* Fix several more missing translations of Discussion.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 ikiwiki (1.42) UNRELEASED; urgency=low
 
-  * Fix one more missing translation of Discussion.
+  * Fix several more missing translations of Discussion.
   * Fix for missing backlinks() in pagestats plugin.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 31 Jan 2007 02:12:01 -0500
