web commit by http://getopenid.com/ptecza: * Response

--- a/doc/bugs/Discussion_link_not_translated_in_post.mdwn
+++ b/doc/bugs/Discussion_link_not_translated_in_post.mdwn
@@ -56,3 +56,8 @@ can see "Discussion" link, instead of Polish "Dyskusja" link. --Pawel
 
 > Found and fixed one more, when per-post discussion links are used in a
 > blog. --[[Joey]]
+
+>> Yes, now it's fixed :) Thank you very much, Joey!
+
+>> BTW, what about translating buttons to editing page ("Save Page",
+>> "Preview" and "Cancel")? There are still hard-coded :( --Pawel
