web commit by RonanLeHy

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -38,6 +38,7 @@ Sites that are using ikiwiki include:
 * [The BSD Associate Admin Book Project](http://bsdwiki.reedmedia.net/)
 * [Proper Treatment 正當作法](http://conway.rutgers.edu/~ccshan/wiki/)
 * [lost scraps](http://web.mornfall.net), pages/blog of Petr Ročkai aka mornfall
+* [Ronan Le Hy's blog](http://bayesien.org), in French.
 
 Please feel free to add your own ikiwiki site!
 
