--- a/doc/plugins/discussion.mdwn
+++ b/doc/plugins/discussion.mdwn
@@ -4,8 +4,4 @@ I have seen a few requests on discussion pages, but not any place specific I thi
 
 --JeremyReed
 
-Some requests:
-
-- rcs plugin ([[JeremyReed]] has one he has been using for over a month with over 850 web commits with 13 users with over ten commits each.)
-
-- manpage plugin: convert **"ls(1)"** style content into Markdown like **\[ls(1)\]\(http://example.org/man.cgi?name=ls&sect=1\)** or into HTML directly.
+> [[todo/plugin]] has a list of stuff, moved yours there. --[[Joey]]
