--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -26,11 +26,11 @@ Suggestions of ideas for plugins:
   or something. It's possible that this is a special case of backlinks and
   is best implemented by making backlinks a plugin somehow. --[[Joey]]
 
-* interwiki links
-
 * random page (cgi plugin; how to link to it easily?)
-
-All the kinds of plugins that blogging software has is also a possibility:
 
 * How about an event calendar. Events could be sub-pages with an embedded 
   code to detail recurrance and/or event date/time
+
+* rcs plugin ([[JeremyReed]] has one he has been using for over a month with over 850 web commits with 13 users with over ten commits each.)
+
+* manpage plugin: convert **"ls(1)"** style content into Markdown like **\[ls(1)\]\(http://example.org/man.cgi?name=ls&sect=1\)** or into HTML directly.
