* Add canedit hook, allowing arbitrary controls over when a page can be   edited. * Move code forcing signing before edit to a new "signinedit" plugin, and   code checking for locked pages into a new "lockedit" plugin. Both are   enabled by default. * Remove the anonok config setting. This is now implemented by a new   "anonok" plugin. Anyone with a wiki allowing anonymous edits should   change their configs to enable this new plugin. * Add an opendiscussion plugin that allows anonymous users to edit   discussion pages, on a wiki that is otherwise wouldn't allow it. * Lots of CGI code reorg and cleanup.

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -129,7 +129,7 @@ and can be enabled by enabling [[CGI]].
 
 ### User registration
 
-Can optionally be configured to allow only registered users to post
+Can optionally be configured to allow only registered users to edit
 pages.
 
 User registration can be done using a web form, or ikiwiki can be
@@ -142,10 +142,12 @@ Thanks to subpages, every page can easily and automatically have a
 /Discussion subpage. By default, these links are included in the
 [[templates]] for each page.
 
-### Page locking
+### Edit controls
 
-Wiki admins can [[lock_pages|page_locking]] so that only other admins
-can edit them.
+Wiki admins can [[lock_pages|page_locking]] so that only other admins can
+edit them. Or a wiki can be set up to allow anyone to edit Discussion
+pages, but only registered users to edit other pages. These are just two
+possibilities, since page edit controls can be changed via plugins.
 
 ### [[PageHistory]]
 
