--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,19 @@ ikiwiki (1.42) UNRELEASED; urgency=low
 
   * Fix several more missing translations of Discussion.
   * Fix for missing backlinks() in pagestats plugin.
+  * Add canedit hook, allowing arbitrary controls over when a page can be
+    edited.
+  * Move code forcing signing before edit to a new "signinedit" plugin, and
+    code checking for locked pages into a new "lockedit" plugin. Both are 
+    enabled by default.
+  * Remove the anonok config setting. This is now implemented by a new
+    "anonok" plugin. Anyone with a wiki allowing anonymous edits should
+    change their configs to enable this new plugin.
+  * Add an opendiscussion plugin that allows anonymous users to edit
+    discussion pages, on a wiki that is otherwise wouldn't allow it.
+  * Lots of CGI code reorg and cleanup.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 31 Jan 2007 02:12:01 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu,  1 Feb 2007 15:36:38 -0500
 
 ikiwiki (1.41) unstable; urgency=low
 
